--- a/water_my_plants/src/App.css
+++ b/water_my_plants/src/App.css
@@ -31,3 +31,63 @@
     transform: rotate(360deg);
   }
 }
+
+body{
+  background: #78c885
+}
+
+.login-card{
+  background: white;
+  border-radius: 3px;
+  width: 21rem;
+  height: 400px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  padding: 0 30px 0 30px;
+  margin: 0 auto;
+  color: rgb(145, 143, 143);
+  font-weight: bold;
+}
+
+.forgot{
+  font-size: 12px;
+}
+.email-input, .password-input{
+  border: none;
+  width: 100%;
+}
+hr{
+  width: 95%;
+}
+
+.name, .password{
+  text-align: left;
+}
+
+.sign-in-header{
+  color: rgb(1, 117, 117);
+  font-size: 1.3rem;
+}
+
+.sign-in-button{
+  width: 65%;
+  color: lightgrey;
+  font-size: 1rem;
+  background: rgb(180, 180, 180);
+  padding: 8px 0 8px 0;
+  border: none;
+  cursor: pointer;
+}
+
+.bottom-signin{
+  display: flex;
+  justify-content: center;
+}
+.need{
+  font-size: 13px;
+  margin: 22px 10px 0 0;
+}
+.sign-up-btn{
+  cursor: pointer;
+}
