--- a/water_my_plants/src/App.css
+++ b/water_my_plants/src/App.css
@@ -1,9 +1,9 @@
 .App {
   text-align: center;
   margin-top: 55px;
-
-
 }
+
+
 
 .clicked{
   background-color: #F9FF00
@@ -54,4 +54,15 @@
 
 
 
+.popup-overlay {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  margin: auto;
+  background-color: rgba(0,0,0, 0.5);
+}
 
