--- a/water_my_plants/src/index.css
+++ b/water_my_plants/src/index.css
@@ -5,6 +5,7 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-image: linear-gradient(to bottom right,#78C885, #198974);
 }
 
 code {
