--- a/water_my_plants/src/App.css
+++ b/water_my_plants/src/App.css
@@ -35,9 +35,9 @@
 .toggle-label .toggle-button {
   content: '';
   position: absolute;
-  top: 1px;
+  top: 0;
   left: 1px;
-  width: 15px;
+  width: 20px;
   height: 15px;
   border-radius: 50px;
   transition: 0.3s;
