--- a/water_my_plants/src/App.css
+++ b/water_my_plants/src/App.css
@@ -12,6 +12,7 @@
   outline: none;
 }
 
+/*  interval */
 
 .interval-h4{
   font-size: 18px;
@@ -31,6 +32,8 @@
 .count-interval{
   margin-right: 51px;
 }
+
+/* Plantlist */
 
 /* Toggle */
 
