--- a/water_my_plants/src/App.css
+++ b/water_my_plants/src/App.css
@@ -33,7 +33,7 @@
   margin-right: 51px;
 }
 
-/* Plantlist */
+/* NewPlant */
 
 /* Toggle */
 
@@ -48,7 +48,7 @@
   align-items: center;
   justify-content: space-between;
   cursor: pointer;
-  width: 40px;
+  width: 37px;
   height: 15px;
   background: grey;
   border-radius: 100px;
@@ -90,4 +90,8 @@
   bottom: 0;
   margin: auto;
   background-color: rgba(0,0,0, 0.5);
+}
+
+.popupusernamepw{
+  color: gray;
 }
